--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,48 @@
-supabase-py==0.0.2
-requests
-python-dotenv
-flask
-flask_cors
+aiohappyeyeballs==2.4.4; python_version >= '3.8'
+aiohttp==3.11.8; python_version >= '3.9'
+aiosignal==1.3.1; python_version >= '3.7'
+annotated-types==0.7.0; python_version >= '3.8'
+anyio==4.6.2.post1; python_version >= '3.9'
+async-timeout==5.0.1; python_version >= '3.8'
+attrs==24.2.0; python_version >= '3.7'
+blinker==1.9.0; python_version >= '3.9'
+certifi==2024.8.30; python_version >= '3.6'
+charset-normalizer==3.4.0; python_full_version >= '3.7.0'
+click==8.1.7; python_version >= '3.7'
+deprecation==2.1.0
+exceptiongroup==1.2.2; python_version >= '3.7'
+flask==3.1.0; python_version >= '3.9'
+flask-cors==5.0.0
+frozenlist==1.5.0; python_version >= '3.8'
+gotrue==2.11.0; python_version >= '3.9' and python_version < '4.0'
+h11==0.14.0; python_version >= '3.7'
+h2==4.1.0; python_full_version >= '3.6.1'
+hpack==4.0.0; python_full_version >= '3.6.1'
+httpcore==1.0.7; python_version >= '3.8'
+httpx[http2]==0.27.2; python_version >= '3.8'
+hyperframe==6.0.1; python_full_version >= '3.6.1'
+idna==3.10; python_version >= '3.6'
+itsdangerous==2.2.0; python_version >= '3.8'
+jinja2==3.1.4; python_version >= '3.7'
+markupsafe==3.0.2; python_version >= '3.9'
+multidict==6.1.0; python_version >= '3.8'
+packaging==24.2; python_version >= '3.8'
+postgrest==0.18.0; python_version >= '3.9' and python_version < '4.0'
+propcache==0.2.0; python_version >= '3.8'
+pydantic==2.10.2; python_version >= '3.8'
+pydantic-core==2.27.1; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+python-dotenv==1.0.1; python_version >= '3.8'
+realtime==2.0.6; python_version >= '3.9' and python_version < '4.0'
+requests==2.32.3; python_version >= '3.8'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+sniffio==1.3.1; python_version >= '3.7'
+storage3==0.9.0; python_version >= '3.9' and python_version < '4.0'
+strenum==0.4.15; python_version < '3.11'
+supabase==2.10.0; python_version >= '3.9' and python_version < '4.0'
+supafunc==0.7.0; python_version >= '3.9' and python_version < '4.0'
+typing-extensions==4.12.2; python_version >= '3.8'
+urllib3==2.2.3; python_version >= '3.8'
+websockets==13.1; python_version >= '3.8'
+werkzeug==3.1.3; python_version >= '3.9'
+yarl==1.18.0; python_version >= '3.9'
